short term fix for position items getting cut off

--- a/frontend/src/components/Main_Refer/main_refer.module.css
+++ b/frontend/src/components/Main_Refer/main_refer.module.css
@@ -112,6 +112,11 @@ h3 {
   overflow-y: auto;
 }
 
+.table {
+    table-layout: fixed;
+    width: 100%;
+}
+
 #scrollableTarget {
   flex-grow: 1;
   overflow: auto;
